Adding project showcase images
Co-authored-by: Lina Kinya Murithi <linakinya@gmail.com>

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="projects-grid">
             <div class="project-card glow-on-hover" data-category="research">
                 <div class="project-img">
-                    <img src="/api/placeholder/500/300" alt="Medical Research Project">
+                    <img src="/images/projects/antimicrobial_resistance.jpg" alt="Medical Research Project">
                 </div>
                 <div class="project-info">
                     <h3>Antimicrobial Resistance Research</h3>
@@ -178,7 +178,7 @@
             </div>
             <div class="project-card glow-on-hover" data-category="data">
                 <div class="project-img">
-                    <img src="/api/placeholder/500/300" alt="Data Analysis Project">
+                    <img src="/images/projects/laboratory_cost_analysis.jpg" alt="Data Analysis Project">
                 </div>
                 <div class="project-info">
                     <h3>Laboratory Cost Analysis</h3>
@@ -192,7 +192,7 @@
             </div>
             <div class="project-card glow-on-hover" data-category="web">
                 <div class="project-img">
-                    <img src="/api/placeholder/500/300" alt="Web Development Project">
+                    <img src="/images/projects/portfolio_website.png" alt="Web Development Project">
                 </div>
                 <div class="project-info">
                     <h3>Portfolio Website</h3>
