Added social media links

--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/nmsby/" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/NMsby" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://x.com/n_msby" class="social-link"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="contact-form">
